2016-02-15  Alex Christensen  <achristensen@webkit.org>

        Re-enable INTL on WinCairo
        https://bugs.webkit.org/show_bug.cgi?id=154256

        Reviewed by Michael Catanzaro.

        * Source/cmake/OptionsWin.cmake:
        Peavo updated icu and it works, so let's re-enable INTL on WinCairo to catch Windows build failures.

2016-02-12  Csaba Osztrogonác  <ossy@webkit.org>

        [EFL][GTK] Fix ENABLE(SVG_OTF_CONVERTER) build
        https://bugs.webkit.org/show_bug.cgi?id=154165

        Reviewed by Alex Christensen.

        * Source/cmake/OptionsEfl.cmake:
        * Source/cmake/OptionsGTK.cmake:

2016-02-11  Konstantin Tokarev  <annulen@yandex.ru>

        [cmake] Consolidate TextureMapper file and include dir lists.
        https://bugs.webkit.org/show_bug.cgi?id=154106

        Reviewed by Michael Catanzaro.

        * Source/cmake/OptionsEfl.cmake: Expose USE_TEXTURE_MAPPER_GL to
        CMake code.
        * Source/cmake/OptionsWinCairo.cmake: Ditto.

2016-02-09  Csaba Osztrogonác  <ossy@webkit.org>

        [GTK][EFL] Fix several build configuration related to SamplingProfiler after r196245
        https://bugs.webkit.org/show_bug.cgi?id=154033

        Reviewed by Michael Catanzaro.

        * Source/cmake/WebKitFeatures.cmake:

2016-02-09  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.11.5 release.

        * Source/cmake/OptionsGTK.cmake: Bump version numbers.

2016-02-07  Yusuke Suzuki  <utatane.tea@gmail.com>

        [GTK][EFL] Enable SamplingProfiler
        https://bugs.webkit.org/show_bug.cgi?id=153638

        Reviewed by Michael Catanzaro.

        Enable SamplingProfiler in GTK and EFL.
        And added option to CMake to switch this from the build command.

        * Source/cmake/OptionsEfl.cmake:
        * Source/cmake/OptionsGTK.cmake:
        * Source/cmake/WebKitFeatures.cmake:

2016-02-07  Konstantin Tokarev  <annulen@yandex.ru>
